Bug 611724 - Assertion failure in TraceRecorder::emitIf().  r=dvander.